--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+    padding: 0;
+}
+
