--- a/app/globals.css
+++ b/app/globals.css
@@ -2,50 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-}
 
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
-    padding: 0;
+  padding: 0;
 }
 
 
-/* Add this in your globals.css or any global CSS file */
-
-/* For WebKit-based browsers (Chrome, Safari) */
+/* Common scrollbar styling */
 ::-webkit-scrollbar {
-  width: 12px; /* width for vertical scrollbar */
+  width: 12px;
 }
 
-::-webkit-scrollbar-track {
-  background-color: #424242; /* Match the background of the body */
+/* Scrollbar for Dark Mode */
+@media (prefers-color-scheme: dark) {
+  ::-webkit-scrollbar-track {
+    background-color: #424242; /* Matches dark background */
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #686868;
+    border-radius: 8px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #565656; /* Slightly darker gray on hover */
+  }
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: #686868; /* Modern gray color for the scrollbar thumb */
-  border-radius: 8px;
-  border: 2px solid transparent; /* Adds padding around the thumb */
-  background-clip: content-box; /* Creates a thin, inset thumb */
+/* Scrollbar for Light Mode */
+@media (prefers-color-scheme: light) {
+  ::-webkit-scrollbar-track {
+    background-color: #e0e0e0; /* Light gray background */
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #a0a0a0; /* Light gray thumb */
+    border-radius: 8px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #8c8c8c; /* Slightly darker on hover */
+  }
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #686868; /* Slightly darker gray on hover */
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
