added new css reset

--- a/app/globals.css
+++ b/app/globals.css
@@ -145,8 +145,11 @@ input[type="date"] {
   -webkit-appearance: none; /* Disable default browser appearance */
   -moz-appearance: none; /* For Firefox */
   appearance: none; /* Standard property */
-  padding: 0.5rem; /* Add custom padding */
+  padding: 0; /* Add custom padding */
+  margin: 0;
   width: 100%; /* Ensure it spans the full width */
+  box-sizing: border-box;
+  background-color: transparent; /* Reset background color */
 }
 
 
